cmake_minimum_required(VERSION 3.12)
project(hust_test)

set(CMAKE_CXX_STANDARD 14)

add_executable(hust_test
        a+b.cpp
        bianli_list.cpp
        bigInteger_sort.cpp
        binary_paixu_tree.cpp
        binary_sort_tree.cpp
        binarytree_bianli_build.cpp
        binarytree_bianli_shuzu.cpp
        chengji_sort.cpp
        duichen_juzhen.cpp
        eight_jinzhi.cpp
        find_position.cpp
        huiwen_string.cpp
        IPAddress.cpp
        jiecheng.cpp
        jiou_jiaoyan.cpp
        juzhen_nizhi.cpp
        juzhen_zuidazhi.cpp
        main.cpp
        min3_zhigong.cpp
        nji_louti.cpp
        print_date.cpp
        shouxingshu.cpp
        sort.cpp
        special_sort.cpp
        string_lianjie.cpp
        stringA+B.cpp
        tongji_danci.cpp
        top2_numbers.cpp)
